# neuralspot-edge

./: LICENSE  README.md  mkdocs.yaml  pyproject.toml
.devcontainer/: devcontainer.json  install.sh
.github/workflows/: ci.yaml  docs.yaml  release.yaml
docs/: index.md
docs/api/: converters.md  dataloaders.md  index.md  interpreters.md  layers.md  metrics.md  optimizers.md
docs/api/callbacks/: index.md  tqdm_progress_bar.md
docs/api/converters/: cpp.md  index.md  tflite.md
docs/api/interpreters/: index.md  tflite.md
docs/api/layers/: index.md
docs/api/losses/: index.md
docs/api/metrics/: f1score.md  flops.md  index.md  snr.md  utils.md
docs/api/models/: conformer.md  efficientnet.md  index.md
docs/api/optimizers/: index.md
docs/api/quantizers/: quantizers.md
docs/api/trainers/: contrastive.md  distiller.md  simclr.md
docs/css/: custom.css
docs/examples/: custom_model_architecture.md  index.md
docs/guides/: custom-model-architecture.ipynb  index.md  model.keras  train-cifar-model.ipynb
docs/models/: index.md  metaformer.md  tsmixer.md
docs/usage/: index.md
keras_edge/: __init__.py  utils.py
keras_edge/converters/cpp/: __init__.py  utils.py
keras_edge/converters/tflite/: __init__.py  converter.py
keras_edge/interpreters/: tflite.py
keras_edge/layers/: __init__.py  patching.py
keras_edge/layers/preprocessing/: __init__.py  specaugment.py
keras_edge/metrics/: __init__.py  threshold.py
keras_edge/models/: __init__.py  activations.py  blocks.py  cct.py  composer.py  conformer.py  convmixer.py  defines.py  efficientnet.py  metaformer.py  mha.py  mobilenet.py  mobileone.py  regnet.py  resnet.py  sequentialnet.py  tcn.py  tsmixer.py  unet.py  unext.py  utils.py
keras_edge/models/optimizers/: contrastive.py  distiller.py  maskautoencoder.py  simclr.py
keras_edge/plotting/: cm.py
neuralspot_edge/: __init__.py  utils.py
neuralspot_edge/callbacks/: __init__.py  tqdm_progress_bar.py
neuralspot_edge/converters/: __init__.py
neuralspot_edge/converters/cpp/: __init__.py  utils.py
neuralspot_edge/converters/tflite/: __init__.py  converter.py  utils.py
neuralspot_edge/converters/torch/: __init__.py
neuralspot_edge/interpreters/: __init__.py
neuralspot_edge/interpreters/tflite/: __init__.py  interpreter.py
neuralspot_edge/layers/: __init__.py  activations.py  convolutional.py  mbconv.py  normalization.py  patching.py  squeeze_excite.py
neuralspot_edge/layers/preprocessing/: __init__.py  amplitude_warp.py  augmentation_pipeline.py  base_augmentation.py  biquad_filter.py  (+20 more)
neuralspot_edge/losses/: __init__.py  simclr.py
neuralspot_edge/metrics/: __init__.py  flops.py  fscore.py  metric_utils.py  snr.py  threshold.py
neuralspot_edge/models/: __init__.py  activations.py  cct.py  composer.py  conformer.py  convmixer.py  defines.py  efficientnet.py  metaformer.py  mobilenet.py  mobileone.py  regnet.py  resnet.py  tcn.py  tsmixer.py  unet.py  unext.py  utils.py
neuralspot_edge/optimizers/: __init__.py
neuralspot_edge/plotting/: __init__.py  cm.py  history.py  roc.py  segmentation.py
neuralspot_edge/quantizers/: __init__.py
neuralspot_edge/trainers/: __init__.py  contrastive.py  distiller.py  mask_autoencoder.py  simclr.py
neuralspot_edge/utils/: __init__.py  aws.py  env.py  export.py  factory.py  file.py  preprocessing.py  rng.py  tensor.py  train.py
scripts/: gen_ref_pages.py
(+35 files in other folders)
