[tool.poetry]
name = "keras-edge"
version = "0.1.2"
description = ""
authors = ["Ambiq AI <support.aitg@ambiq.com>"]
readme = "README.md"
packages = [
    { include = "keras_edge" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
h5py = "^3.10.0"
keras = "^3.0.4"
pydantic = "^2.6.1"
requests = "^2.31.0"
tqdm = "^4.66.4"
tensorflow = "^2.16.1"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
plotly = "^5.22.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.28"
mkdocstrings-python = "^1.10.5"
markdown-include = "^0.8.1"
mkdocs-exclude = "^1.0.2"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
ruff = "^0.4.9"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["F401"]
