[project]
name = "neuralspot-edge"
version = "0.2.2"
description = "NSE is a Keras add-on targeting Ambiq edge devices."
authors = [
    {name = "Ambiq AI", email = "support.aitg@ambiq.com"},
]
readme = "README.md"


requires-python = ">=3.10,<3.13"
dependencies = [
    "h5py>=3.10.0",
    "keras>=3.0.4",
    "pydantic>=2.6.1",
    "requests>=2.31.0",
    "tqdm>=4.66.4",
    "tensorflow>=2.16.1",
    "matplotlib>=3.9.0",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.1",
    "plotly>=5.22.0",
    "seaborn>=0.13.2",
    "boto3>=1.34.151",
]

[dependency-groups]
dev = [
    "ipython>=8.25.0",
    "ipykernel>=6.29.5",
    "notebook>=7.2.1",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.28",
    "mkdocstrings-python>=1.10.5",
    "markdown-include>=0.8.1",
    "mkdocs-exclude>=1.0.2",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-section-index>=0.3.9",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-jupyter>=0.25.1",
]
ci = [
    "ruff>=0.7.2",
]

[tool.setuptools]
packages = ["neuralspot_edge"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
